Git pull always with rebase instead of merge

--- a/custom/git/.gitconfig
+++ b/custom/git/.gitconfig
@@ -117,6 +117,8 @@ cmd = emacs --eval \"\
   whitespace = nowarn
 [branch]
   autosetupmerge = true
+[pull]
+	rebase = true
 [push]
   # 'git push' will push the current branch to its tracking branch
   # the usual default is to push all branches
